--- a/MeghaBooks.DataAccess/MeghaBooks.DataAccess.csproj
+++ b/MeghaBooks.DataAccess/MeghaBooks.DataAccess.csproj
@@ -11,7 +11,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Folder Include="Data\" />
+		<Folder Include="Repository\IRepository\" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\MeghaBooks.Models\MeghaBooks.Models.csproj" />
 	  <ProjectReference Include="..\MeghaBooks.Utility\MeghaBooks.Utility.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Repository\IRepository\" />
 	</ItemGroup>
 </Project>
