Assignment ProductCRUD(3) Part 3 completed

--- a/MeghaBookStore/MeghaBookStore.csproj
+++ b/MeghaBookStore/MeghaBookStore.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Admin\Views\Product\" />
+    <Folder Include="wwwroot\images\products\" />
   </ItemGroup>
 
 </Project>
